<resources>
    <string name="app_name">My Water App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_settings_title"><u>Notification settings</u></string>
    <string name="personal_settings_title"><u>Personal data</u></string>
    <string name="notification_settings_schedule">Schedule reminders</string>
    <string name="personalDataGenderTitle">Gender</string>
    <string name="personalDataWeightTitle">Weight</string>
    <string name="confirm_button">confirm</string>
    <string name="notification_message">Time to drink some water</string>
    <string name="maleTitle">Male</string>
    <string name="femaleTitle">Female</string>
    <string name="your_gender_header">Your gender:</string>
    <string name="water_norm">%1$s ml</string>

</resources>