<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/HeadersSettingsCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_settings_title" />

            <TextView
                android:id="@+id/tv_settingsFragment_scheduleReminder"
                style="@style/HeadersSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_settings_schedule" />

            <TextView
                style="@style/HeadersSettingsCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_settings_title" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/HeadersSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personalDataGenderTitle" />

                <TextView
                    android:id="@+id/tv_settingsFragment_genderCurrentValue"
                    style="@style/SettingsResultsPersonalData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Текущее значение" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/HeadersSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personalDataWeightTitle" />

                <TextView
                    android:id="@+id/tv_settingsFragment_weightCurrentValue"
                    style="@style/SettingsResultsPersonalData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Текущее значение" />
            </LinearLayout>


        </LinearLayout>



    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>